--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,16 +6,19 @@ authors = ["Ramane23 <contactsouley@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = ">=3.12,<3.13"
 jupyter = "^1.0.0"
 ipykernel = "^6.29.5"
-pandas = "^2.2.2"
+pandas = "<2.2.0"
 tqdm = "^4.66.4"
 xgboost = "^2.1.0"
 pyarrow = "^16.1.0"
 lightgbm = "^4.4.0"
 scikit-learn = "^1.5.1"
 plotly = "^5.22.0"
+optuna = "^3.6.1"
+python-dotenv = "^1.0.1"
+hopsworks = "^3.7.0"
 
 
 [build-system]
