--- a/.github/workflows/feature_pipeline.yml
+++ b/.github/workflows/feature_pipeline.yml
@@ -22,7 +22,11 @@ jobs:
 
       # Installing Poetry
       - name: Install Poetry
-        uses: snok/install_poetry@v1
+        uses: snok/install-poetry@v1
+        with:
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+          installer-parallel: true
 
       # Poetry install to install all the dependencies or requirements
       - name: Install Dependencies
