--- a/.github/workflows/feature_pipeline.yml
+++ b/.github/workflows/feature_pipeline.yml
@@ -30,15 +30,15 @@ jobs:
 
       # Verify Poetry installation
       - name: Verify Poetry installation
-        run: poetry --version
+        run: ${{ env.POETRY_HOME }}/bin/poetry --version
 
       # Poetry install to install all the dependencies or requirements
       - name: Install Dependencies
-        run: poetry install
+        run: ${{ env.POETRY_HOME }}/bin/poetry install
         if: steps.cache.outputs.cache-hit != 'true'
 
       # Run the feature pipeline notebook from the command line (using run jupyter nbconvert)
       - name: Execute Python workflow from batch script
         env:  
           HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
-        run: poetry run jupyter nbconvert --to notebook --execute notebooks/12_feature_pipeline.ipynb
+        run: ${{ env.POETRY_HOME }}/bin/poetry run jupyter nbconvert --to notebook --execute notebooks/12_feature_pipeline.ipynb
