--- a/.github/workflows/feature_pipeline.yml
+++ b/.github/workflows/feature_pipeline.yml
@@ -28,17 +28,21 @@ jobs:
           virtualenvs-in-project: true
           installer-parallel: true
 
+      # Add Poetry to PATH
+      - name: Add Poetry to PATH
+        run: echo "${{ env.POETRY_HOME }}\bin" >> $env:GITHUB_PATH
+
       # Verify Poetry installation
       - name: Verify Poetry installation
-        run: ${{ env.POETRY_HOME }}/bin/poetry --version
+        run: poetry --version
 
       # Poetry install to install all the dependencies or requirements
       - name: Install Dependencies
-        run: ${{ env.POETRY_HOME }}/bin/poetry install
+        run: poetry install
         if: steps.cache.outputs.cache-hit != 'true'
 
       # Run the feature pipeline notebook from the command line (using run jupyter nbconvert)
       - name: Execute Python workflow from batch script
         env:  
           HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
-        run: ${{ env.POETRY_HOME }}/bin/poetry run jupyter nbconvert --to notebook --execute notebooks/12_feature_pipeline.ipynb
+        run: poetry run jupyter nbconvert --to notebook --execute notebooks/12_feature_pipeline.ipynb
