--- a/.github/workflows/feature_pipeline.yml
+++ b/.github/workflows/feature_pipeline.yml
@@ -28,13 +28,28 @@ jobs:
           virtualenvs-in-project: true
           installer-parallel: true
 
+      # Add Poetry to PATH
+      - name: Add Poetry to PATH
+        shell: powershell
+        run: |
+          $poetryPath = "$env:LOCALAPPDATA\pypoetry\bin"
+          echo "##[set-env name=POETRY_HOME]$poetryPath"
+          echo "$poetryPath" | Out-File -FilePath $env:GITHUB_PATH -Append
+
+      # Verify Poetry installation
+      - name: Verify Poetry installation
+        shell: powershell
+        run: poetry --version
+
       # Poetry install to install all the dependencies or requirements
       - name: Install Dependencies
+        shell: powershell
         run: poetry install
         if: steps.cache.outputs.cache-hit != 'true'
 
       # Run the feature pipeline notebook from the command line (using run jupyter nbconvert)
       - name: Execute Python workflow from batch script
+        shell: powershell
         env:  
           HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
         run: poetry run jupyter nbconvert --to notebook --execute notebooks/12_feature_pipeline.ipynb
