--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ plotly = "^5.22.0"
 optuna = "^3.6.1"
 python-dotenv = "^1.0.1"
 hopsworks = "^3.7.0"
+streamlit = "^1.36.0"
+geopandas = "^1.0.1"
 
 
 [build-system]
