--- a/.github/workflows/feature_pipeline.yml
+++ b/.github/workflows/feature_pipeline.yml
@@ -2,7 +2,7 @@ name: feature-pipeline  # Define the name of the GitHub Actions workflow
 
 on:
   schedule:
-    - cron: '0,30 * * * *'  # Run the workflow every 30 minutes
+    - cron: '0 0 * * *'  # Run the workflow every day at midnight
 
   workflow_dispatch:  # Allow the workflow to be manually triggered from the GitHub UI
 
